--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,8 @@
                                 下载
                             </p>
                             <div class="dropdown-content" style="background-color:  rgba(56, 53, 53, 0.774);;">
-                                <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
+                                <a style="color: white;"
+                                    href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
                                     基础版下载
                                 </a>
                                 <br>
@@ -69,7 +70,8 @@
                                     扩展版下载
                                 </a>
                                 <br>
-                                <a style="color: white;" href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
+                                <a style="color: white;"
+                                    href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
                                     更新包下载
                                 </a>
                                 <br>
@@ -110,74 +112,94 @@
             红色警戒2重聚2023
         </h2>
         <p style="color: white;">
-                        <h2>
+            <h2>
                 <p style="color: white;">QQ交流群</p>
             </h2>
-            <h3>
-            <h3 style="color: white;">君悦的作战实验室:363035291 (1000人);
+        <h3>
+            <h3 style="color: white;">
+                君悦的作战实验室:363035291 (1000人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BAq65NRwHzdG5ftzGhiSaIQ6VyPM_4Fw&authKey=JCyVJT3uAbjI7TLZmmVEj7%2BtWj56Loci4JkyH%2F37%2BpqYLI69Pad0mjHHmQbjPsIo&noverify=0&group_code=363035291" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BAq65NRwHzdG5ftzGhiSaIQ6VyPM_4Fw&authKey=JCyVJT3uAbjI7TLZmmVEj7%2BtWj56Loci4JkyH%2F37%2BpqYLI69Pad0mjHHmQbjPsIo&noverify=0&group_code=363035291"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">
+                    点我加群
+                </a>
+            </h4>
             <h3 style="color: white;">君悦的建造场:561178527 (2000人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=foooHhDOx4bs-qAy4LZZLNIxSGFb3dWY&authKey=QXYD4JNkma72pGFtjPAzUF5DI1jnVycVp1c%2FRrvRT2nILxXbUmBwClec2ZokE6UG&noverify=0&group_code=561178527" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=foooHhDOx4bs-qAy4LZZLNIxSGFb3dWY&authKey=QXYD4JNkma72pGFtjPAzUF5DI1jnVycVp1c%2FRrvRT2nILxXbUmBwClec2ZokE6UG&noverify=0&group_code=561178527"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
             <h3 style="color: white;">君悦的空指部:398677201 (1000人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=q5m8KkKNtcnYXrcLmh8EVsYeF81z5arB&authKey=s4tJ2DGGfTjw6%2BPGmEptldRYVe7BR7jBFR3rkE75Bk3tjUa1V50vrUJPCUeakigV&noverify=0&group_code=398677201" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
-          <h3 style="color: white;">君悦的战车工厂:877478233 (1000人);
-          </h3>
-          <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lelRgD9kZYDgXfFgzZTmS8y3XWDVFRsE&authKey=nX0Tdh5rpdWZkBOaj6CXevnCvRem2o5vQd1oo0BTqDHhGH7hMHFvvtTXUAwSCwAk&noverify=0&group_code=877478233" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=q5m8KkKNtcnYXrcLmh8EVsYeF81z5arB&authKey=s4tJ2DGGfTjw6%2BPGmEptldRYVe7BR7jBFR3rkE75Bk3tjUa1V50vrUJPCUeakigV&noverify=0&group_code=398677201"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h3 style="color: white;">君悦的战车工厂:877478233 (1000人);
+            </h3>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lelRgD9kZYDgXfFgzZTmS8y3XWDVFRsE&authKey=nX0Tdh5rpdWZkBOaj6CXevnCvRem2o5vQd1oo0BTqDHhGH7hMHFvvtTXUAwSCwAk&noverify=0&group_code=877478233"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
             <h3 style="color: white;">将军同志的作战实验室！:491826892 (500人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1TtgRE9TKQxO0r4iO7pv9ovGzskE4eSw&authKey=j6a1R%2Bm1CKKrkPPgOvCGVlaEHS6xBgFRzy%2B%2B7LpAanapxSec55D%2FgKPad5%2FxDA6%2F&noverify=0&group_code=491826892" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1TtgRE9TKQxO0r4iO7pv9ovGzskE4eSw&authKey=j6a1R%2Bm1CKKrkPPgOvCGVlaEHS6xBgFRzy%2B%2B7LpAanapxSec55D%2FgKPad5%2FxDA6%2F&noverify=0&group_code=491826892"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
             <h3 style="color: white;">将军同志的建造场！:331643433 (200人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=kmz7zkBpm6y131G8WU45HJ4S9TYZtqP0&authKey=rXkoGL0OdYWlUBlH8s7%2BfYA4pjflDIi8k%2FYdFqZFowVEYJV1obIgXBOGzNDmwec8&noverify=0&group_code=331643433" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=kmz7zkBpm6y131G8WU45HJ4S9TYZtqP0&authKey=rXkoGL0OdYWlUBlH8s7%2BfYA4pjflDIi8k%2FYdFqZFowVEYJV1obIgXBOGzNDmwec8&noverify=0&group_code=331643433"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
             <h3 style="color: white;">盟指的天气控制器！:863238365 (200人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=s_YDjDYzaKqUbhorSOAhHg3KIMPWOvRC&authKey=8lUHTDhGR2ciFFOu8Vi5PRz%2BI9jN1SoIXVP0LLF3fLrC%2FKk%2F%2FBi0%2Biu1%2FZ%2BHbGtf&noverify=0&group_code=863238365" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=s_YDjDYzaKqUbhorSOAhHg3KIMPWOvRC&authKey=8lUHTDhGR2ciFFOu8Vi5PRz%2BI9jN1SoIXVP0LLF3fLrC%2FKk%2F%2FBi0%2Biu1%2FZ%2BHbGtf&noverify=0&group_code=863238365"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
             <h3 style="color: white;">北极狐の小窝:585663503 (500人);
             </h3>
-            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1crX18gIgI_Z8Bxx8ZtfyfluKRwRO-wE&authKey=4zsFfb%2BX4ncAzTWc5%2BaboCKovGNjTVx35HuDL1GtJ%2BSEol9OAcroThJ8mjLNwahp&noverify=0&group_code=585663503" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
-            </h3>
-            </div>
-            <br/>
-            <div style="display: flex;
-            flex-direction: column;
-            align-items: center;">
-            <h2>
-                <p style="color: white;">QQ频道</p>
-            </h2>
-            <h3>
-            <h3 style="color: white;">红色警戒2重聚2023:iw89uc0x15 (未知);
-            </h3>
-            <h4 style="color: white;">链接:<a href="https://pd.qq.com/s/a0pnslseu" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加入QQ频道</a></h4>
-            </h3>
+            <h4 style="color: white;">链接:<a
+                    href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1crX18gIgI_Z8Bxx8ZtfyfluKRwRO-wE&authKey=4zsFfb%2BX4ncAzTWc5%2BaboCKovGNjTVx35HuDL1GtJ%2BSEol9OAcroThJ8mjLNwahp&noverify=0&group_code=585663503"
+                    target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+        </h3>
         </p>
     </div>
- </div>
- <div style="color: white;">
-    Copyright © 2022-2023 红警指战员！
-    <span id="span"></span>
-    <script type="text/javascript">
-        function runtime(){
-            // 初始时间，日/月/年 时:分:秒
-            X = new Date("07/03/2023 16:00:00");
-            Y = new Date();
-            T = (Y.getTime()-X.getTime());
-            M = 24*60*60*1000;
-            a = T/M;
-            A = Math.floor(a);
-            b = (a-A)*24;
-            B = Math.floor(b);
-            c = (b-B)*60;
-            C = Math.floor((b-B)*60);
-            D = Math.floor((c-C)*60);
-            //信息写入到DIV中
-            span.innerHTML = "本站已安全运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"
-        }
-        setInterval(runtime, 1000);
-    </script>
-</div>
+    <br />
+    <div style="display: flex;
+            flex-direction: column;
+            align-items: center;">
+        <h2>
+            <p style="color: white;">QQ频道</p>
+        </h2>
+        <h3>
+            <h3 style="color: white;">红色警戒2重聚2023:iw89uc0x15 (未知);
+            </h3>
+            <h4 style="color: white;">链接:<a href="https://pd.qq.com/s/a0pnslseu" target="_blank"
+                    rel="noopener noreferrer" style="color:yellow;">点我加入QQ频道</a></h4>
+        </h3>
+    </div>
+    <div style="color: white;">
+        Copyright © 2022-2023 红警指战员！
+        <span id="span"></span>
+        <script type="text/javascript">
+            function runtime() {
+                // 初始时间，日/月/年 时:分:秒
+                X = new Date("07/03/2023 16:00:00");
+                Y = new Date();
+                T = (Y.getTime() - X.getTime());
+                M = 24 * 60 * 60 * 1000;
+                a = T / M;
+                A = Math.floor(a);
+                b = (a - A) * 24;
+                B = Math.floor(b);
+                c = (b - B) * 60;
+                C = Math.floor((b - B) * 60);
+                D = Math.floor((c - C) * 60);
+                //信息写入到DIV中
+                span.innerHTML = "本站已安全运行: " + A + "天" + B + "小时" + C + "分" + D + "秒"
+            }
+            setInterval(runtime, 1000);
+        </script>
+    </div>
 </body>
 
 </html>
