--- a/index.html
+++ b/index.html
@@ -248,8 +248,14 @@ padding: 5px;">
     align-items: center;">
         <div style="display: flex;">
             <div>
-                <a href="https://space.bilibili.com/471856024?spm_id_from=333.337.0.0" style="color: yellow;">
+                <a href="https://space.bilibili.com/471856024?spm_id_from=333.337.0.0" target="_blank" rel="noopener noreferrer"
+                style="color: aqua;">
                     哔哩哔哩
+                </a>
+            </div>
+            <div>
+                <a href="./contact.html">
+                    关于我们
                 </a>
             </div>
         </div>
