--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             display: block;
         }
     </style>
-    <link rel="shurtcut icon" href="./Image/clienticon.ico">
+    <link rel="shurtcut icon" href="./clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -47,7 +47,8 @@
     flex-direction: row-reverse;">
         <div style="display: flex;
     background-color: darkorange;
-    width: 250px;">
+    margin-top: 3px;
+    margin-right: 5px;">
             <ul style="display: flex">
                 <li class="dhlbk">
                     <a href="./index.html">
@@ -93,6 +94,15 @@
                         <div>
                             <p>
                                 更新日志
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="dhlbk">
+                    <a href="https://ru2023.sasw.top/">
+                        <div>
+                            <p>
+                                其他官网
                             </p>
                         </div>
                     </a>
