--- a/download.html
+++ b/download.html
@@ -43,7 +43,8 @@
     flex-direction: row-reverse;">
         <div style="display: flex;
     background-color: darkorange;
-    width: 250px;">
+    margin-top: 3px;
+    margin-right: 5px;">
             <ul style="display: flex">
                 <li class="dhlbk">
                     <a href="./index.html">
@@ -87,6 +88,15 @@
                         <div>
                             <p>
                                 更新日志
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="dhlbk">
+                    <a href="https://ru2023.sasw.top/">
+                        <div>
+                            <p>
+                                其他官网
                             </p>
                         </div>
                     </a>
