--- a/uplog.html
+++ b/uplog.html
@@ -47,7 +47,8 @@
     flex-direction: row-reverse;">
         <div style="display: flex;
     background-color: darkorange;
-    width: 250px;">
+    margin-top: 3px;
+    margin-right: 5px;">
             <ul style="display: flex">
                 <li class="dhlbk">
                     <a href="./index.html">
@@ -92,8 +93,17 @@
                             </p>
                         </div>
                     </a>
-                                        <div style="background-color: yellow;
+                    <div style="background-color: yellow;
                     height: 3px;"></div>
+                    <li class="dhlbk">
+                        <a href="https://ru2023.sasw.top/">
+                            <div>
+                                <p>
+                                    其他官网
+                                </p>
+                            </div>
+                        </a>
+                    </li>
                 </li>
                 <li class="dhlbk">
                     <a href="./contact.html">
