--- a/uplog.html
+++ b/uplog.html
@@ -39,7 +39,7 @@
             display: block;
         }
     </style>
-    <link rel="shurtcut icon" href="./Image/clienticon.ico">
+    <link rel="shurtcut icon" href="./clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
