--- a/network.html
+++ b/network.html
@@ -41,7 +41,7 @@
             color: yellow;
         }
     </style>
-    <link rel="shurtcut icon" href="./Image/clienticon.ico">
+    <link rel="shurtcut icon" href="./clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
