--- a/download.html
+++ b/download.html
@@ -34,8 +34,8 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+    <link rel="shurtcut icon" href="./clienticon.ico">
     </style>
-    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
