--- a/index.html
+++ b/index.html
@@ -256,15 +256,17 @@ padding: 5px;">
     <div style="display: flex;
     flex-direction: column;
     align-items: center;">
-        <div style="display: flex;">
-            <div>
+        <div style="display: flex;
+        padding: 3px;">
+            <div style="margin: 3px;">
                 <a href="https://space.bilibili.com/471856024?spm_id_from=333.337.0.0" target="_blank" rel="noopener noreferrer"
                 style="color: aqua;">
                     哔哩哔哩
                 </a>
             </div>
-            <div>
-                <a href="./contact.html">
+            <div style="margin: 3px;">
+                <a href="./contact.html"
+                style="color: aqua;">
                     关于我们
                 </a>
             </div>
