--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             display: block;
         }
     </style>
-        <link rel="shurtcut icon" href="./clienticon.ico">
+        <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
@@ -67,7 +67,7 @@
                                     基础版下载
                                 </a>
                                 <br>
-                                <a style="color: white;" href="https://ru2023.sasw.top/download.html">
+                                <a style="color: white;" href="https://ru2023.sasw.top/download.html" target="_blank" rel="noopener noreferrer">
                                     扩展版下载
                                 </a>
                                 <br>
@@ -93,7 +93,7 @@
                     </a>
                 </li>
                 <li class="dhlbk">
-                    <a href="https://ru2023.sasw.top/">
+                    <a href="https://ru2023.sasw.top" target="_blank" rel="noopener noreferrer">
                         <div>
                             <p>
                                 其他官网
@@ -170,6 +170,9 @@
             <h4 style="color: white;">链接:<a
                     href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1crX18gIgI_Z8Bxx8ZtfyfluKRwRO-wE&authKey=4zsFfb%2BX4ncAzTWc5%2BaboCKovGNjTVx35HuDL1GtJ%2BSEol9OAcroThJ8mjLNwahp&noverify=0&group_code=585663503"
                     target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>
+            <h3 style="color: white;">指战员的下饭群:692818798 (200人);
+            </h3>
+            <h4 style="color: white;">链接:<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=rt3rVzGQEAZ5jLJjq7gtUtaYHGOAW_0i&authKey=LQYd5VLszoivzwG63QqqzozCLTSonq4tXV%2BqAOXYoL%2FGFS5RBDGIGdzOObtIFNij&noverify=0&group_code=692818798" target="_blank" rel="noopener noreferrer" style="color:yellow;">点我加群</a></h4>       
         </h3>
         </p>
     </div>
@@ -187,8 +190,9 @@
                     rel="noopener noreferrer" style="color:yellow;">点我加入QQ频道</a></h4>
         </h3>
     </div>
+    ICP备案：<a href="https://icp.gov.moe/?keyword=20230701" target="_blank" rel="noopener noreferrer"><img src=https://moey.cn/images/moeicp.png style=“width:20px;height:20px;margin-bottom:5px;color: #FF69B4;”alt="moeicp">萌ICP备20230701号</a>  |  <a style="text-decoration:none;color:#e77c8e;" href="https://ecy.best/go.html" title="异次元之旅-跃迁-我们一起去萌站成员的星球旅行吧！"  target="_blank" rel="noopener noreferrer"><img src="https://ecy.best/images/icon/icon64pink.png" style="width:24px;height:24px" alt="ecy">异次元之旅</a><br>
     <div style="color: white;">
-        Copyright © 2022-2023 红警指战员！
+        Copyright © 2023 By 红警HJ指战员，All Rights Reserved！
         <span id="span"></span>
         <script type="text/javascript">
             function runtime() {
@@ -210,6 +214,36 @@
             setInterval(runtime, 1000);
         </script>
     </div>
+    <!--音乐播放器
+        具体参数介绍如下：data-id: 歌曲/专辑/歌单ID
+
+data-server: 音乐平台，支持如下参数：
+netease （网易云音乐）
+tencent （qq音乐）
+xiami （虾米音乐）
+kugou （酷狗音乐）
+baidu （百度音乐）
+
+data-type: 请求类型，支持如下参数：
+song （单曲）
+album （专辑）
+playlist （歌单）
+search （搜索）
+
+data-mode: 播放模式，支持如下参数：
+random （随机）
+single （单曲）
+circulation （列表循环）
+order （列表）
+
+data-autoplay: 自动播放 ，支持如下参数：
+true
+false-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
+<script src="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js"></script>
+<div id="aplayer" class="aplayer" data-autoplay="true" data-id="2251407356" data-server="netease" data-type="playlist" data-fixed="true" data-listfolded="true" data-order="random" data-theme="#f0f0f0"></div>
+<script src="https://unpkg.com/meting@1.2.0/dist/Meting.min.js"></script>
+</div>
 </body>
 
 </html>
