--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             margin: auto;
         }
     </style>
-    <link rel="shurtcut icon" href="./clienticon.ico">
+    <link rel="shurtcut icon" href="./Image/clienticon.ico">
 </head>
 
 <body style="background-color: rgba(19, 19, 19, 0.938);">
     <div style="display: flex;">
         <div>
         <img style="width: 50px;
-        margin-top: 3px;" src="./clienticon.ico" alt="logo">
+        margin-top: 3px;" src="./Image/clienticon.ico" alt="logo">
         </div>
         <div style="display: flex;
         flex-direction: row-reverse;">
@@ -81,7 +81,7 @@
                                         基础版下载
                                     </a>
                                     <br>
-                                    <a style="color: white;" href="https://ru2023.sasw.top/download.html">
+                                    <a style="color: white;" href="https://ru2023.sasw.top/download.html" target="_blank" rel="noopener noreferrer">
                                         扩展版下载
                                     </a>
                                     <br>
@@ -107,7 +107,7 @@
                         </a>
                     </li>
                     <li class="dhlbk">
-                        <a href="https://ru2023.sasw.top/">
+                        <a href="https://ru2023.sasw.top" target="_blank" rel="noopener noreferrer">
                             <div>
                                 <p>
                                     其他官网
@@ -294,8 +294,9 @@
             <b>Mod</b>版权为 君悦OwO 所有，如对平台进行二次修改，请标注原作者。
         </span>
     </div>
+    ICP备案：<a href="https://icp.gov.moe/?keyword=20230701" target="_blank" rel="noopener noreferrer"><img src=https://moey.cn/images/moeicp.png style=“width:20px;height:20px;margin-bottom:5px;color: #FF69B4;”alt="moeicp">萌ICP备20230701号</a>  |  <a style="text-decoration:none;color:#e77c8e;" href="https://ecy.best/go.html" title="异次元之旅-跃迁-我们一起去萌站成员的星球旅行吧！"  target="_blank" rel="noopener noreferrer"><img src="https://ecy.best/images/icon/icon64pink.png" style="width:24px;height:24px" alt="ecy">异次元之旅</a><br>
     <div style="color: white;">
-        Copyright © 2022-2023 红警指战员！
+        Copyright © 2023 By 红警HJ指战员，All Rights Reserved！
         <span id="span"></span>
         <script type="text/javascript">
             function runtime() {
@@ -317,6 +318,36 @@
             setInterval(runtime, 1000);
         </script>
     </div>
+    <!--音乐播放器
+        具体参数介绍如下：data-id: 歌曲/专辑/歌单ID
+
+data-server: 音乐平台，支持如下参数：
+netease （网易云音乐）
+tencent （qq音乐）
+xiami （虾米音乐）
+kugou （酷狗音乐）
+baidu （百度音乐）
+
+data-type: 请求类型，支持如下参数：
+song （单曲）
+album （专辑）
+playlist （歌单）
+search （搜索）
+
+data-mode: 播放模式，支持如下参数：
+random （随机）
+single （单曲）
+circulation （列表循环）
+order （列表）
+
+data-autoplay: 自动播放 ，支持如下参数：
+true
+false-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
+<script src="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js"></script>
+<div id="aplayer" class="aplayer" data-autoplay="true" data-id="2251407356" data-server="netease" data-type="playlist" data-fixed="true" data-listfolded="true" data-order="random" data-theme="#f0f0f0"></div>
+<script src="https://unpkg.com/meting@1.2.0/dist/Meting.min.js"></script>
+</div>
 </body>
 
 </html>
