更新 download.html

--- a/download.html
+++ b/download.html
@@ -93,7 +93,7 @@
                     </a>
                 </li>
                 <li class="dhlbk">
-                    <a href="https://ru2023.sasw.top" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.raa2022.top" target="_blank" rel="noopener noreferrer">
                         <div>
                             <p>
                                 其他官网
@@ -183,7 +183,6 @@
             </li>
         </ul>
     </div>
-    ICP备案：<a href="https://icp.gov.moe/?keyword=20230701" target="_blank" rel="noopener noreferrer"><img src=https://moey.cn/images/moeicp.png style=“width:20px;height:20px;margin-bottom:5px;color: #FF69B4;”alt="moeicp">萌ICP备20230701号</a>  |  <a style="text-decoration:none;color:#e77c8e;" href="https://ecy.best/go.html" title="异次元之旅-跃迁-我们一起去萌站成员的星球旅行吧！"  target="_blank" rel="noopener noreferrer"><img src="https://ecy.best/images/icon/icon64pink.png" style="width:24px;height:24px" alt="ecy">异次元之旅</a><br>
     <div style="color: white;">
         Copyright © 2023 By 红警HJ指战员，All Rights Reserved！
         <span id="span"></span>
