更新 contact.html

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                                     基础版下载
                                 </a>
                                 <br>
-                                <a style="color: white;" href="https://ru2023.sasw.top/download.html" target="_blank" rel="noopener noreferrer">
+                                <a style="color: white;" href="https://www.raa2022.top/download.html" target="_blank" rel="noopener noreferrer">
                                     扩展版下载
                                 </a>
                                 <br>
