--- a/index.html
+++ b/index.html
@@ -75,25 +75,6 @@
                                 <p>
                                     下载
                                 </p>
-                                <div class="dropdown-content" style="background-color:  rgba(56, 53, 53, 0.774);;">
-                                    <a style="color: white;"
-                                        href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
-                                        基础版下载
-                                    </a>
-                                    <br>
-                                    <a style="color: white;" href="https://ru2023.sasw.top/download.html" target="_blank" rel="noopener noreferrer">
-                                        扩展版下载
-                                    </a>
-                                    <br>
-                                    <a style="color: white;"
-                                        href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061427-1213Update.7z">
-                                        更新包下载
-                                    </a>
-                                    <br>
-                                    <a style="color: white;" href="./network.html">
-                                        云盘下载
-                                    </a>
-                                </div>
                             </div>
                         </a>
                     </li>
@@ -107,7 +88,7 @@
                         </a>
                     </li>
                     <li class="dhlbk">
-                        <a href="https://ru2023.sasw.top" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.raa2022.top" target="_blank" rel="noopener noreferrer">
                             <div>
                                 <p>
                                     其他官网
@@ -294,7 +275,6 @@
             <b>Mod</b>版权为 君悦OwO 所有，如对平台进行二次修改，请标注原作者。
         </span>
     </div>
-    ICP备案：<a href="https://icp.gov.moe/?keyword=20230701" target="_blank" rel="noopener noreferrer"><img src=https://moey.cn/images/moeicp.png style=“width:20px;height:20px;margin-bottom:5px;color: #FF69B4;”alt="moeicp">萌ICP备20230701号</a>  |  <a style="text-decoration:none;color:#e77c8e;" href="https://ecy.best/go.html" title="异次元之旅-跃迁-我们一起去萌站成员的星球旅行吧！"  target="_blank" rel="noopener noreferrer"><img src="https://ecy.best/images/icon/icon64pink.png" style="width:24px;height:24px" alt="ecy">异次元之旅</a><br>
     <div style="color: white;">
         Copyright © 2023 By 红警HJ指战员，All Rights Reserved！
         <span id="span"></span>
