更新 contact.html

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="dhlbk">
-                    <a href="https://ru2023.sasw.top" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.raa2022.top" target="_blank" rel="noopener noreferrer">
                         <div>
                             <p>
                                 其他官网
