--- a/download.html
+++ b/download.html
@@ -76,7 +76,7 @@
                     </a>
                 </li>
                 <li class="dhlbk">
-                    <a href="https://www.raa2022.top" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.ru2023.top" target="_blank" rel="noopener noreferrer">
                         <div>
                             <p>
                                 其他官网
@@ -115,23 +115,9 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;">
-                    <a href="https://ghproxy.com/https://github.com/Reunion-2023/Reunion2023/releases/download/1.4.13/202307061505-1.4.13-Basic.exe">
+                    <a href="https://www.ru2023.top">
                         <p style="color: yellow;">
-                            基础版下载
-                        </p>
-                    </a>
-                </div>
-            </li>
-            <li class="dhlbk">
-                <div style="background-color: rgb(0, 128, 122);               
-                width: 100px;
-                height: 45px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;">
-                    <a href="https://www.raa2022.top/download.html">
-                        <p style="color: yellow;">
-                            扩展版下载
+                            客户端下载
                         </p>
                     </a>
                 </div>
