--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li class="dhlbk">
-                        <a href="https://www.raa2022.top" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.ru2023.top" target="_blank" rel="noopener noreferrer">
                             <div>
                                 <p>
                                     其他官网
