--- a/uplog.html
+++ b/uplog.html
@@ -79,7 +79,7 @@
                     <div style="background-color: yellow;
                     height: 3px;"></div>
                     <li class="dhlbk">
-                        <a href="https://www.raa2022.top" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.ru2023.top" target="_blank" rel="noopener noreferrer">
                             <div>
                                 <p>
                                     其他官网
@@ -107,6 +107,11 @@
             红色警戒2重聚2023 更新日志
         </h2>
         <span class="fontcolor">
+            ——————————————————————1.4.20——————————————————————<br>
+            1.修复一些已知问题。<br>
+            ——————————————————————1.4.19——————————————————————<br>
+            1.新增尤复版共辉及配套AI。<br>
+            2.修复一些已知问题。<br>
             ——————————————————————1.4.13——————————————————————<br>
             1.修复了断网打不开客户端的问题。<br>
             2.修复限造解除存在的一些问题。<br>
